# PCA-experiments

./: .gitignore  README.md  im2col.py  image_BPCA.py  image_PCA.py  number-components-PCA.ipynb  pyproject.toml  requirements.txt  reverting-PCA.ipynb
